# CoT-Faithfulness-Model-Diffing

./: .gitignore  README.md  acts_config.yaml  collect_acts.py  crosscoder.ipynb  dataset.ipynb  eval.ipynb  eval.sh  fine-tune.ipynb  inspect.ipynb  install.sh  main.py  pyproject.toml  train.py
adapter/: README.md  adapter_config.json  adapter_model.safetensors
crosscoder/: crosscoder.py  train.py
data/: eval.jsonl
eval/: accuracy_batched.py  accuracy_medical.py
fine-tuning/: dataset.ipynb
results/: gsm8k100.csv  gsm8k_base_2048.csv  gsm8k_tuned_2048.csv
results/archive/: gsm8k100_base.csv
scripts/: eval.sh
templates/: collect_acts_template.py
